--- a/week1/part-1-hello-world/Cargo.toml
+++ b/week1/part-1-hello-world/Cargo.toml
@@ -4,6 +4,11 @@ version = "0.1.0"
 authors = ["Ryan Eberhardt <reberhardt7@gmail.com>"]
 edition = "2018"
 
+[[bin]]
+name = "basics"
+path = "src/basics.rs"
+
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
